# hpm-probe-firmware

./: .gitignore  Cargo.toml
firmware/: Cargo.toml  build.rs  memory.x
firmware/src/: app.rs  dap.rs  jtag.rs  main.rs  swd.rs
firmware/src/usb/: dap_v2.rs  dfu.rs  mod.rs
hpm-probe-bsp/: Cargo.toml
hpm-probe-bsp/src/: clock.rs  delay.rs  dma.rs  gpio.rs  lib.rs  spi.rs  uart.rs  usb.rs
